src/objects/CampaignMember.object
<CustomObject>
    <fields>
        <fullName>Contact_Score__c</fullName>
        <formula>Contact.Contact_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_By__c</fullName>
        <formula>CreatedBy.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_date__c</fullName>
        <formula>IF(ISNULL( Lead.CreatedDate ),Contact.CreatedDate,Lead.CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DateTime_Added_to_Campaign__c</fullName>
        <label>DateTime Added to Campaign</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Date_Time_Modified__c</fullName>
        <formula>LastModifiedDate</formula>
        <label>Date/Time Modified</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Hour__c</fullName>
        <formula>IF ( DATEVALUE( LastModifiedDate ) &gt;=  
DATE ( YEAR (DATEVALUE( LastModifiedDate )),3,1) 
+ 
( 
14- 
CASE( MOD(DATE ( YEAR (DATEVALUE( LastModifiedDate )),3,1) - DATE (1900,1,7),7) , 
0,7,MOD(DATE ( YEAR (DATEVALUE( LastModifiedDate )),3,1) - DATE (1900,1,7),7)) 
) 
&amp;&amp; 
DATEVALUE( LastModifiedDate ) &lt; 
DATE ( YEAR (DATEVALUE( LastModifiedDate )),11,1) 
+ 
( 
7- 
CASE( MOD(DATE ( YEAR (DATEVALUE( LastModifiedDate )),11,1) - DATE (1900,1,7),7) , 
0,7,MOD(DATE ( YEAR (DATEVALUE( LastModifiedDate )),11,1) - DATE (1900,1,7),7)) 
), 
(CASE( VALUE(MID(TEXT( LastModifiedDate ),12,2)) , 
00, &apos;19:00&apos;, 
01, &apos;20:00&apos;, 
02, &apos;21:00&apos;, 
03, &apos;22:00&apos;, 
04, &apos;23:00&apos;, 
05, &apos;00:00&apos;, 
06, &apos;01:00&apos;, 
07, &apos;02:00&apos;, 
08, &apos;03:00&apos;, 
09, &apos;04:00&apos;, 
10, &apos;05:00&apos;, 
11, &apos;06:00&apos;, 
12, &apos;07:00&apos;, 
13, &apos;08:00&apos;, 
14, &apos;09:00&apos;, 
15, &apos;10:00&apos;, 
16, &apos;11:00&apos;, 
17, &apos;12:00&apos;, 
18, &apos;13:00&apos;, 
19, &apos;14:00&apos;, 
20, &apos;15:00&apos;, 
21, &apos;16:00&apos;, 
22, &apos;17:00&apos;, 
23, &apos;18:00&apos;, 
NULL)) 
, 
(CASE( VALUE(MID(TEXT( LastModifiedDate ),12,2)) , 
00, &apos;18:00&apos;, 
01, &apos;19:00&apos;, 
02, &apos;20:00&apos;, 
03, &apos;21:00&apos;, 
04, &apos;22:00&apos;, 
05, &apos;23:00&apos;, 
06, &apos;00:00&apos;, 
07, &apos;01:00&apos;, 
08, &apos;02:00&apos;, 
09, &apos;03:00&apos;, 
10, &apos;04:00&apos;, 
11, &apos;05:00&apos;, 
12, &apos;06:00&apos;, 
13, &apos;07:00&apos;, 
14, &apos;08:00&apos;, 
15, &apos;09:00&apos;, 
16, &apos;10:00&apos;, 
17, &apos;11:00&apos;, 
18, &apos;12:00&apos;, 
19, &apos;13:00&apos;, 
20, &apos;14:00&apos;, 
21, &apos;15:00&apos;, 
22, &apos;16:00&apos;, 
23, &apos;17:00&apos;, 
NULL)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hour</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Product__c</fullName>
        <formula>IF(ISNULL( Lead.CreatedDate ),
Contact.Initial_Product_Text__c,
Lead.Initial_Product_Text__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Converted__c</fullName>
        <formula>Lead.IsConverted</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Converted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Score__c</fullName>
        <formula>Lead.Lead_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <description>This field stores the sum of lead score and contact score. As campaign member can only be a lead or contact at any given time this field is equal to Lead score or Contact score.

This field is used to query the Campaign members for get next button.</description>
        <formula>Lead.Lead_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>